syntax = "proto3";
package mars.stn;


option java_package = "win.liyufan.im.proto";
option java_outer_classname = "NotifyMessageOuterClass";

//option objc_class_prefix = "LYF";


enum PullType {
  Pull_Normal = 0;
  Pull_ChatRoom = 1;
  Pull_Group = 2;
}

message NotifyMessage {
  PullType type = 1;
  int64 head = 2;
  string target = 3;
}
